--- a/frontend/AndroidManifest.xml
+++ b/frontend/AndroidManifest.xml
@@ -5,16 +5,18 @@
     android:versionName="1.0" >
 
     <uses-sdk android:minSdkVersion="8" />
+	<uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
+	   <uses-library android:name="com.google.android.maps" />
+
         <activity
             android:label="@string/app_name"
             android:name=".KharamlyActivity" >
             <intent-filter >
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
