--- a/frontend/AndroidManifest.xml
+++ b/frontend/AndroidManifest.xml
@@ -9,7 +9,8 @@
 
     <application
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name" >
+        android:label="@string/app_name" 
+		android:theme="@android:style/Theme.NoTitleBar">
 	   <uses-library android:name="com.google.android.maps" />
 
         <activity
