--- a/frontend/AndroidManifest.xml
+++ b/frontend/AndroidManifest.xml
@@ -21,6 +21,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ReportBlocked" 
+            android:label="@string/street_block"
+            android:theme="@android:style/Theme.Dialog" ></activity>
     </application>
 
 </manifest>
