--- a/frontend/.classpath
+++ b/frontend/.classpath
@@ -4,6 +4,6 @@
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry kind="src" path="gen"/>
-	<classpathentry kind="lib" path="/home/ahmed/Downloads/twitter4j-android-2.2.5/lib/twitter4j-core-android-2.2.5.jar"/>
+	<classpathentry kind="lib" path="/Users/Monayri/Downloads/twitter4j-core-android-2.2.5.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
