--- a/frontend/AndroidManifest.xml
+++ b/frontend/AndroidManifest.xml
@@ -5,25 +5,38 @@
     android:versionName="1.0" >
 
     <uses-sdk android:minSdkVersion="8" />
-	<uses-permission android:name="android.permission.INTERNET" />
-	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name" 
-		android:theme="@android:style/Theme.NoTitleBar">
-	   <uses-library android:name="com.google.android.maps" />
+        android:label="@string/app_name"
+        android:theme="@android:style/Theme.NoTitleBar" >
+        <uses-library android:name="com.google.android.maps" />
 
         <activity
             android:label="@string/app_name"
             android:name=".KharamlyActivity" >
             <intent-filter >
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+            <intent-filter >
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:host="KharamlyActivity"
+                    android:scheme="kharamly" />
+            </intent-filter>
         </activity>
-          <service android:name="MyGpsService" >
+
+        <service android:name="MyGpsService" >
         </service>
     </application>
 
